--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,65 @@
 Comando SASS
 sass --watch scss/style.scss css/style.css
 */
-* {
-  background-color: #E8F9FD !important;
+/*nesting o anidamiento*/
+.fondoWeb {
+  background-color: #b2dabc;
+  margin: 10px;
+  padding: 20px;
+  /*media query*/
+}
+.fondoWeb .encabezado {
+  color: #5F7161;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+@media screen and (max-width: 450px) {
+  .fondoWeb {
+    background-color: rgb(226, 226, 117);
+  }
+}
+.fondoWeb .H2 {
+  color: #3c5e06;
+  text-align: center;
+}
+.fondoWeb .footer {
+  color: #5F7161;
+  text-align: center;
+  text-decoration: double;
 }
 
-h1 {
-  color: #79DAE8;
+.enlacesdeNavegacion {
+  color: #032b88;
+  font-family: "Courier New", Courier, monospace;
+  justify-content: space-evenly;
+  text-align: center;
+}
+.enlacesdeNavegacion .d-flex {
+  color: #056185;
+  text-decoration: underline;
+}
+.enlacesdeNavegacion .d-flex:hover {
+  color: rgb(89, 15, 226);
 }
 
-h2 {
-  color: #79DAE8;
+.listaTrabajosRealizados {
+  color: #19241a;
+}
+.listaTrabajosRealizados h3 {
+  color: #3c5e06;
+  justify-content: center;
+  text-align: center;
 }
 
-h3 {
-  color: #79DAE8;
+.listaTrabajosRealizados ul {
+  list-style: georgian;
 }
-
-a {
-  color: #0AA1DD;
-}
-
-p {
-  color: #2155CD;
+.listaTrabajosRealizados ul li {
+  color: rgb(26, 87, 29);
+  justify-content: center;
+  text-align: center;
 }
 
 /*# sourceMappingURL=style.css.map */
