segunda entrega de proyecto final

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,9 @@ sass --watch scss/style.scss css/style.css
 */
 /*nesting o anidamiento*/
 .fondoWeb {
-  background-color: #b2dabc;
   margin: 10px;
   padding: 20px;
+  background-image: linear-gradient(to bottom, white, rgb(198, 226, 197));
   /*media query*/
 }
 .fondoWeb .encabezado {
@@ -14,7 +14,7 @@ sass --watch scss/style.scss css/style.css
   display: flex;
   justify-content: center;
   text-align: center;
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 @media screen and (max-width: 450px) {
   .fondoWeb {
@@ -24,6 +24,8 @@ sass --watch scss/style.scss css/style.css
 .fondoWeb .H2 {
   color: #3c5e06;
   text-align: center;
+  animation: zoomIn;
+  animation-duration: 3s;
 }
 .fondoWeb .footer {
   color: #5F7161;
@@ -33,7 +35,7 @@ sass --watch scss/style.scss css/style.css
 
 .enlacesdeNavegacion {
   color: #032b88;
-  font-family: "Courier New", Courier, monospace;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   justify-content: space-evenly;
   text-align: center;
 }
