--- a/css/style.css
+++ b/css/style.css
@@ -2,22 +2,14 @@
 Comando SASS
 sass --watch scss/style.scss css/style.css
 */
-/*nesting o anidamiento*/
-.fondoWeb {
-  margin: 10px;
-  padding: 20px;
-  background-image: linear-gradient(to bottom, white, rgb(226, 226, 218));
-  margin: auto;
-  display: contents;
-  /*media query*/
-}
-.fondoWeb .encabezado {
+/*header*/
+.encabezado {
   color: white;
   display: flex;
   justify-content: center;
   text-align: center;
 }
-.fondoWeb .encabezado .H1 {
+.encabezado .H1 {
   color: #051367;
   font-style: italic;
   font-size: 220%;
@@ -25,6 +17,41 @@ sass --watch scss/style.scss css/style.css
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   margin-top: auto;
   margin-bottom: auto;
+}
+
+/*footer*/
+.footer {
+  color: #020358;
+  text-align: center;
+  text-decoration: double;
+  margin: 50px;
+}
+
+/*variables*/
+/*media query*/
+* {
+  margin: 0;
+  padding: 0;
+}
+
+/*colores*/
+.fondoWeb .contacto, .fondoWeb .descripcionPerfil, .fondoWeb .enlacesdeNavegacion {
+  display: flex;
+  flex-direction: row;
+}
+
+/*nesting o anidamiento*/
+.fondoWeb {
+  margin: 10px;
+  padding: 20px;
+  background-image: linear-gradient(to bottom, white, rgb(226, 226, 204));
+  margin: auto;
+  display: contents;
+}
+.fondoWeb .logo {
+  width: 100%;
+  max-width: 150px;
+  height: auto;
 }
 .fondoWeb .H2 {
   color: #051367;
@@ -42,23 +69,22 @@ sass --watch scss/style.scss css/style.css
   text-align: center;
   line-height: 6;
   padding: 5;
-  display: flex;
   justify-content: space-evenly;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   align-content: stretch;
-  flex-direction: row;
-  flex-wrap: wrap;
   align-items: center;
 }
 .fondoWeb .descripcionPerfil {
-  display: flex;
   border: 10px;
-  flex-direction: row;
   text-align: unset;
   justify-content: space-around;
   align-content: flex-start;
-  flex-wrap: nowrap;
   align-items: center;
+}
+.fondoWeb .descripcionPerfil .fotoPerfil {
+  width: 100%;
+  max-width: 300px;
+  height: auto;
 }
 .fondoWeb .descripcionPerfil .parrafo1 {
   color: #1c1e97;
@@ -71,7 +97,7 @@ sass --watch scss/style.scss css/style.css
 .fondoWeb .parrafos2 {
   margin: 30px;
   padding: 30px;
-  color: #2c68f3;
+  color: #0920f1;
   line-height: 1.6;
   justify-content: center;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -89,13 +115,13 @@ sass --watch scss/style.scss css/style.css
   /*Transicion*/
 }
 .fondoWeb .seccionesDescriptivas .H3 {
-  color: #050e61;
+  color: #000746;
   text-align: center;
   padding: 5px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .fondoWeb .seccionesDescriptivas .H3:hover {
-  color: #0920f1;
+  color: #1c1e97;
   text-align: center;
   padding: 5px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -112,14 +138,11 @@ sass --watch scss/style.scss css/style.css
 .fondoWeb .contacto {
   padding: 10px;
   margin: 5px;
-  display: flex;
   justify-content: center;
   align-content: space-between;
-  flex-direction: row;
-  flex-wrap: wrap;
 }
 .fondoWeb .contacto .parrafo3 {
-  color: #000957;
+  color: #000746;
   font-weight: bold;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
@@ -127,30 +150,21 @@ sass --watch scss/style.scss css/style.css
   margin: 10px;
   padding: 0;
   display: grid;
-  /*declarar filas*/
-  grid-template-rows: auto auto;
-  /*declarar columnas*/
-  grid-template-columns: auto auto auto;
   gap: 20px;
+  grid-template-columns: auto auto auto;
+  justify-items: space-around;
 }
 .fondoWeb .gallery-container .gallery-item {
   align-items: center;
 }
-.fondoWeb .d-flex {
-  color: #056185;
-  text-decoration: underline;
-}
-.fondoWeb .d-flex:hover {
-  color: rgb(89, 15, 226);
-}
 .fondoWeb .listaTrabajosRealizados h3 {
-  color: #050e61;
+  color: #000746;
   text-align: center;
   padding: 5px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 .fondoWeb .listaTrabajosRealizados ul {
-  list-style: georgian;
+  list-style: circle;
 }
 .fondoWeb .listaTrabajosRealizados ul li {
   color: #051367;
@@ -167,16 +181,19 @@ sass --watch scss/style.scss css/style.css
   justify-content: space-evenly;
   align-content: stretch;
   align-items: stretch;
+  padding-left: 0;
 }
 .fondoWeb .listaContactos {
   color: #051367;
   text-align: center;
   line-height: 8;
+  padding-left: 0;
 }
 .fondoWeb .listaContactosActuales {
   color: #051367;
   text-align: center;
   line-height: 8;
+  padding-left: 0;
 }
 .fondoWeb .listaContactosActuales .list-group-item {
   color: #051367;
@@ -191,16 +208,21 @@ sass --watch scss/style.scss css/style.css
   justify-content: space-around;
   align-items: center;
 }
-.fondoWeb .footer {
-  color: #5F7161;
-  text-align: center;
-  text-decoration: double;
-  margin: 50px;
-}
-@media screen and (max-width: 375px) {
+@media screen and (max-width: 450px) {
   .fondoWeb .enlacesdeNavegacion {
     display: flex;
     justify-content: space-evenly;
+  }
+  .fondoWeb .encabezado {
+    color: white;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .fondoWeb .descripcionPerfil {
+    flex-direction: column;
   }
   .fondoWeb .bloque {
     display: flex;
@@ -208,11 +230,11 @@ sass --watch scss/style.scss css/style.css
     flex-direction: column;
   }
   .fondoWeb .gallery-container {
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
+    justify-items: center;
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 540px) {
   .fondoWeb .enlacesdeNavegacion {
     display: flex;
     justify-content: space-evenly;
@@ -226,9 +248,12 @@ sass --watch scss/style.scss css/style.css
     align-content: center;
     flex-direction: column;
   }
+  .fondoWeb .descripcionPerfil {
+    flex-direction: column;
+  }
   .fondoWeb .gallery-container {
-    grid-template-rows: auto auto auto;
-    grid-template-columns: auto auto;
+    grid-template-columns: auto;
+    justify-items: center;
   }
   .fondoWeb .contacto {
     display: flex;
