--- a/scss/style.scss
+++ b/scss/style.scss
@@ -209,9 +209,10 @@ sass --watch scss/style.scss css/style.css
 
     .listaContactos {
         color: $azulmarino;
-        text-align: center;
-        line-height: 8;
-        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+        align-content: center;
     }
 
     .listaContactosActuales {
